--- a/client/src/pages/Auth/style.css
+++ b/client/src/pages/Auth/style.css
@@ -12,14 +12,7 @@
 }
 
 
-.frame .iiitdm-logo {
-  position: absolute;
-  top: 20px;
-  right: 20px;
-  width: 120px;
-  height: 120px;
-  z-index: 10;
-}
+/* Removed - logo now handled by React component */
 
 .frame .div {
   background-color: rgba(255, 255, 255, 0.85);
